# My_robot

./: README.md
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/config/: mapper_params_online_async.yaml  ros2_controllers.yaml
my_robot_description/launch/: robot_gazebo.launch.py
my_robot_description/urdf/: camera.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro
my_robot_description/urdf/install/: local_setup.sh  setup.sh
my_robot_description/worlds/: maze.world  maze1.world  model.config  model.sdf  obstacles.world  world_test.world
